add update/delete/list services to inventory.proto
